--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -8,7 +8,7 @@
   text-align: center;
   position: relative;
   overflow: hidden;
-  background-color: #0d1b2a; /* choose a dark color */
+  background-color: #1b1d1d; /* choose a dark color */
   color: white; /* text stays visible */
 }
 
