--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,7 +6,7 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
+  --ifm-color-primary: #00ccff;
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
   --ifm-color-primary-darkest: #205d3b;
@@ -19,7 +19,7 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
-  --ifm-color-primary: #25c2a0;
+  --ifm-color-primary: #009cbb;
   --ifm-color-primary-dark: #21af90;
   --ifm-color-primary-darker: #1fa588;
   --ifm-color-primary-darkest: #1a8870;
@@ -28,17 +28,47 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
-.navbar__brand .navbar__title {
-  color: #1a8870 !important; /* use the green hover color */
-}
-.navbar__link {
-  color: #1a8870 !important; /* replace with exact hover green you see */
+
+.navbar__link--active {
+  color: var(--ifm-color-primary) !important ;
+  font-weight: bold;
+  border-bottom: 2px solid var(--ifm-color-primary);
 }
 .footer {
+  box-shadow: 0 0 2px #a1a1a1;
+  border-radius: 8px;
+  margin: 0px 2px;
   background-color: #1b1b1d;
 }
-.navbar__link--active {
-  color: #ff6600 !important ;
+.LoginButton {
+  background-color: var(--ifm-color-primary);
+  border: none;
+  cursor: pointer;
   font-weight: bold;
-  border-bottom: 2px solid #ff6600;
+  color: white;
+  font-size: 16px;
+  padding: 12px;
+  border-radius: 8px;
+}
+
+[data-theme="light"] .footer {
+  background-color: #f5f5f5;
+  color: #000;
+}
+
+[data-theme="dark"] .footer {
+  background-color: #1b1b1d;
+  color: #fff;
+}
+[data-theme="light"] .footer .footer__title {
+  color: #000 !important;
+}
+[data-theme="dark"] .footer .footer__title {
+  color: #fff !important;
+}
+[data-theme="light"] .footer .footer__link-item {
+  color: #007acc !important;
+}
+[data-theme="dark"] .footer .footer__link-item {
+  color: #00ccff !important;
 }
